feat: create debs for all declared packages
Iterate through all packages declared in the project file and
create a deb file for each file, adding proper control metadata
to each one.

Signed-off-by: Claudio Matsuoka <claudio.matsuoka@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -305,6 +305,7 @@ ignore = [
     "A003",   # Class attribute shadowing built-in (reason: Class attributes don't often get bare references)
     "SIM117", # Use a single `with` statement with multiple contexts instead of nested `with` statements
     # (reason: this creates long lines that get wrapped and reduces readability)
+    "N818",   # Exception name must have Error suffix (reason: doesn't allow names like FeatureNotImplemented)
 
     # Ignored due to conflicts with ruff's formatter:
     # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
