--- a/tests/integration/project/valid-projects/minimal-adopt-info/debcraft.yaml
+++ b/tests/integration/project/valid-projects/minimal-adopt-info/debcraft.yaml
@@ -6,6 +6,9 @@ adopt-info: yolo
 # No longer necessary because we have adopt-info.
 # version: 0
 
+platforms:
+  amd64:
+
 # This part exists so we have a valid adopt-info.
 parts:
   yolo:
