--- a/tests/integration/project/invalid-projects/invalid-name/debcraft.yaml
+++ b/tests/integration/project/invalid-projects/invalid-name/debcraft.yaml
@@ -3,5 +3,5 @@ summary: A debcraft project with an invalid name.
 maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 version: 0
 
-platforms:
+platforms:  # Workaround for https://github.com/canonical/debcraft/issues/52
   amd64:
