--- a/tests/integration/project/valid-projects/minimal/debcraft.yaml
+++ b/tests/integration/project/valid-projects/minimal/debcraft.yaml
@@ -1,3 +1,6 @@
 name: debcraft-minimal
 maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
 version: 0
+
+platforms: # Workaround for https://github.com/canonical/debcraft/issues/52
+  amd64:
