refactor: reorganize infrastructure for binary helpers
This commit adds ELF file handling, used in helpers to strip ELF binaries
and add shlibs to the control tarball. It also modularizes md5sums file
creation, executing it along with other helpers at packaging time.

Signed-off-by: Claudio Matsuoka <claudio.matsuoka@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ dynamic = ["version"]
 dependencies = [
     "craft-application>=5.4.0",
     "zstandard>=0.25.0",
+    "pyelftools>=0.32",
 ]
 classifiers = [
     "Development Status :: 1 - Planning",
