chore: require craft-parts 2.29.0
Signed-off-by: Claudio Matsuoka <claudio.matsuoka@canonical.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ description = "Pack up debs with the Crafting Experience"
 dynamic = ["version"]
 dependencies = [
     "craft-application>=5.4.0",
-    "craft-parts@git+https://github.com/cmatsuoka/craft-parts@refactor/mid-step-hooks",
+    "craft-parts>=2.29.0",
     "zstandard>=0.25.0",
     "pyelftools>=0.32",
 ]
